# python-project-lvl1

./: .codeclimate.yml  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
brain_games/: cli.py  game_flow.py
brain_games/games/: base.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: even.py
