[tool.poetry]
name = "hexlet_code"
version = "0.2.0"
description = ""
authors = ["Denis S. <makafonov@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
yapf = "^0.30.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
